# uds

./: .bygge.toml  .gitignore  DEV.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
hooks/: pre-commit
src/bygge/: __init__.py  constants.py  dot_config.py  main.py  package_meta.py  requirements.py  run.py  target_info.py  workspace.py
src/bygge/cmd/: __init__.py  check_cmd.py  commit_unchecked_cmd.py  constants.py  coverage_cmd.py  dead_cmd.py  fmt_cmd.py  hook_cmd.py  hooks_cmd.py  info_cmd.py  init_cmd.py  link_cmd.py  link_util.py  lint_cmd.py  new_cmd.py  plugin_runner.py  recode_cmd.py  run_result.py  runner.py  test_cmd.py  type_check_cmd.py  unhook_cmd.py  unlink_cmd.py
src/bygge/contracts/: __init__.py  coverage_plugin.py  coverage_tool.py  dead_code_plugin.py  format_plugin.py  input.py  lint_plugin.py  payload.py  plugin.py  plugin_result.py  source_dir_plugin.py  source_dir_tool.py  test_dir_plugin.py  test_dir_tool.py  test_plugin.py  testing_tool.py  tool.py  tool_result.py  type_check_plugin.py  type_check_tool.py
src/bygge/package_info/: __init__.py  context.py  package_info.py  plugin_info.py  tool_info.py
src/bygge/plugins/: __init__.py  algorithms.py  basedpyright.py  hatchling.py  magic_sources.py  plugins.py  pytest.py  pytest_cov.py  pytest_discovery.py  pytest_run_mixin.py  ruff_check_plugin.py  ruff_format_plugin.py  ruff_run_mixin.py  setuptools.py  test_dirs_mixin.py  util.py  vulture.py
tests/: conftest.py  test_algorithms.py  test_basedpyright_edge_cases.py  test_cli.py  test_cmd_error_paths.py  test_cmd_modules.py  test_colour_formatter.py  test_config_discovery.py  test_fs.py  test_info_cmd.py  test_iterable.py  test_link_unlink_cmd.py  test_magic_sources.py  test_main.py  test_new_cmd.py  test_no_reread.py  test_package_info.py  test_package_info_edge_cases.py  test_placeholder.py  test_plugin_info.py  test_plugin_mixins.py  test_plugin_runner.py  test_plugin_utils.py  test_plugins.py  test_py_typed_marker.py  test_recode_cmd.py  test_remaining_modules.py  test_requirements.py  test_run.py  test_runner.py  test_setuptools_edge_case.py  test_toml.py  test_toml_error_handling.py  test_tool_info.py  test_transformers.py  test_unset.py  test_workspace.py
tests/resources/: example0-input.txt  example0-output.txt  example1-input.txt  example1-output.txt  example2-input.txt  example2-output.txt
(+11 files in other folders)
